# si

./: .dockerignore  .env.example  .gitignore  .gitmodules  .golangci.yml  .sops.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  DYAD_PROTOCOL.md  README.md  TASK_BOARD.md  bootstrap.sh  docker-compose.legacy.yml  docker-compose.yml  docker-stack.yml  docs.json  go.work  go.work.sum  package.json  pnpm-workspace.yaml  si
.github/scripts/: wait-cli-release-assets.sh
.github/workflows/: agent_market_research.yml  agent_pr_guardian.yml  agent_website_sentry.yml  cli-release-assets.yml  fort-vault-ci.yml  helia-cloud-ci.yml  install-smoke.yml  orbits-runners.yml  plugins-runners.yml  releasemind-release.yml  sun-cloud-ci.yml  workflow-sanity.yml
agents/actor/: Dockerfile
agents/coder/: Dockerfile  go.mod
agents/codex-monitor/: Dockerfile  docker.go  go.mod  go.sum  kube.go  main.go  spawn.go  usage_test.go
agents/critic/: Dockerfile  go.mod  go.sum
agents/dashboard/: Dockerfile  go.mod  main.go
agents/infra-broker/: Dockerfile  go.mod  main.go
agents/manager/: Dockerfile  go.mod  go.sum
agents/program-manager/: Dockerfile  go.mod  main.go
agents/resource-broker/: Dockerfile  go.mod  main.go
agents/router/: Dockerfile  go.mod  main.go
agents/shared/: go.mod  go.sum
agents/telegram-bot/: Dockerfile  go.mod  main.go
apps/: README.md
apps/ReleaseParty/: .gitignore  README.md  app.json  docker-compose.dev.yml
apps/dashboard/: app.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/sample-go-service/: Dockerfile  app.json  main.go
configs/: codex-config.template.toml  codex-mcp-config.toml  codex_accounts.json  credentials-registry.json  dyad_roster.json  router_rules.json  ssh_target
docs/: API_CHARACTERISTICS.md  APPLE_APPSTORE.md  AWS.md  BROWSER.md  CACHE_GOVERNANCE.md  CLI_REFERENCE.md  CLOUDFLARE.md  CODEX_SKILLS_AND_INTERACTIVE_DRIVER_PLAN.md  COMMAND_REFERENCE.md  DOCS_STYLE_GUIDE.md  DYAD.md  GCP.md  GITHUB.md  GOOGLE_PLACES.md  GOOGLE_PLAY.md  GOOGLE_YOUTUBE.md  HELIA.md  HOMEBREW_CORE.md  HOST_TEST_MATRIX.md  INSTALLER.md  INTEGRATIONS_OVERVIEW.md  INTEGRATION_ECOSYSTEM.md  INTEGRATION_GATEWAY_ARCHITECTURE.md  LLM_RESEARCH_WORKFLOWS.md  MINTLIFY.md  NUCLEUS.md  NUCLEUS_GPT_ACTIONS_OPENAPI.yaml  OCI.md  OPENAI.md  ORBITAL.md  ORBITALS.md  ORBITS.md  PAAS_AGENT_APPROVAL_FLOW.md  PAAS_AGENT_AUDIT_ARTIFACTS.md  PAAS_AGENT_OFFLINE_SMOKE_TESTS.md  PAAS_AGENT_RUNTIME_ADAPTER.md  PAAS_AGENT_RUNTIME_COMMANDS.md  PAAS_AGENT_SCHEDULER_SELF_HEAL.md  PAAS_AUTOMATION_AGENTS.md  PAAS_BACKUP_RESTORE_POLICY.md  (+66 more)
docs/beam_messages/: codex_login_actor_infra.txt  codex_login_actor_infra_recreated.txt  codex_login_critic_infra.txt
docs/market-research/: release-notes-competitive-pricing-2026-02-13.md  usage-based-pricing.md
docs/operations/: agents.md  market-taskboard.md
docs/plans/: 2026-02-25-sun-remote-vault-plan.md
docs/tickets/: 0001-dyad-peek.md  0002-dyad-strict-report-and-long-output.md  0003-dyad-offline-smoke.md  0004-codex-config-web-search.md
docs/workstreams/: codex_login_beam_infra.md
npm/si/: README.md  package.json  package.template.json
npm/si-cli/: README.md  package.json
packaging/homebrew-core/: si.rb
profiles/: actor-infra.md  actor-research.md  actor-web.md  critic-infra.md  critic-qa.md  critic-research.md  critic-web.md
pulumi/infra/: Pulumi.yaml  go.mod  main.go
rust/: README.md
rust/crates/si-agents/: Cargo.toml
rust/crates/si-agents/src/: lib.rs
rust/crates/si-cli/: Cargo.toml
rust/crates/si-cli/src/: main.rs  vault_compat.rs
rust/crates/si-cli/tests/: cli.rs
rust/crates/si-codex/: Cargo.toml
rust/crates/si-codex/src/: lib.rs
rust/crates/si-config/: Cargo.toml
rust/crates/si-config/src/: lib.rs  paths.rs  runtime.rs  settings.rs
rust/crates/si-docker/: Cargo.toml
rust/crates/si-docker/src/: lib.rs
rust/crates/si-fort/: Cargo.toml
rust/crates/si-fort/src/: lib.rs
rust/crates/si-nucleus/: Cargo.toml
rust/crates/si-nucleus-runtime/: Cargo.toml
rust/crates/si-nucleus-runtime-codex/: Cargo.toml
rust/crates/si-nucleus-runtime-codex/src/: lib.rs
rust/crates/si-nucleus-runtime/src/: lib.rs
rust/crates/si-nucleus/src/: lib.rs  main.rs
rust/crates/si-provider-aws/: Cargo.toml
rust/crates/si-provider-aws/src/: lib.rs
rust/crates/si-provider-github/: Cargo.toml
rust/crates/si-provider-github/src/: lib.rs
rust/crates/si-provider-google/: Cargo.toml
rust/crates/si-provider-google/src/: lib.rs
rust/crates/si-provider-oci/: Cargo.toml
rust/crates/si-provider-oci/src/: lib.rs
rust/crates/si-provider-workos/: Cargo.toml
rust/crates/si-provider-workos/src/: lib.rs
rust/crates/si-tools/: Cargo.toml
rust/crates/si-tools/src/: lib.rs
rust/crates/si-vault/: Cargo.toml
rust/crates/si-vault/src/: lib.rs
secrets/: README.md
tests/: README.md  run.sh
tests/go/: run-go-tests.sh
tickets/: 2026-03-15-si-rust-transition-plan.md  2026-03-19-si-rust-retirement-followup-plan.md  2026-03-28-orbit-provider-migration-plan.md  README.md  api-bridge-refactor-plan.md  cli-direct-http-migration.md  cloudflare-integration-plan.md  creds-management-integration-plan.md  dyad-001-fix-settings-bind-mount.md  dyad-002-dyad-offline-e2e-smoke.md  github-integration-plan.md  google-places-integration-plan.md  google-youtube-integration-plan.md  nucleus-transition-hardening.md  paas-competitive-research-board.md  paas-monetization-solo-dev.md  paas-state-isolation-model.md  paas-terminal-ai-master-plan.md  paas-workstream-status-board.md  phase9-10-realhost-matrix.sh  phase9-10-realhost-test-plan.md  si-architecture.md  si-distribution-readiness.md  stripe-go-integration-plan.md  vault-format-fidelity-matrix-and-test-plan.md
tools/: app-entrypoint.sh  install-si-settings.sh  install-si.sh  paas-failure-drills.sh  si-cache-governor  si-dev  test-all.sh  test-fort-spawn-matrix.sh  test-install-si-docker.sh  test-install-si-homebrew.sh  test-install-si-npm.sh  test-install-si-settings.sh  test-install-si.sh  test-rust-host-matrix.sh  test-vault.sh  test.sh
(+860 files in other folders)
