[workspace]
members = [
    "rust/crates/si-core",
    "rust/crates/si-config",
    "rust/crates/si-command-manifest",
    "rust/crates/si-provider-catalog",
    "rust/crates/si-process",
    "rust/crates/si-docker",
    "rust/crates/si-runtime",
    "rust/crates/si-fort",
    "rust/crates/si-vault",
    "rust/crates/si-warmup",
    "rust/crates/si-codex",
    "rust/crates/si-dyad",
    "rust/crates/si-provider-github",
    "rust/crates/si-provider-stripe",
    "rust/crates/si-provider-workos",
    "rust/crates/si-provider-cloudflare",
    "rust/crates/si-provider-apple",
    "rust/crates/si-cli",
]
resolver = "2"

[workspace.package]
version = "0.54.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Aureuma/si"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.39", features = ["derive"] }
libc = "0.2.172"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
url = "2.5.4"
