[package]
name = "si-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "agents-doctor"
path = "src/bin/agents_doctor.rs"

[[bin]]
name = "agents-status"
path = "src/bin/agents_status.rs"

[[bin]]
name = "preflight-codex-upgrade"
path = "src/bin/preflight_codex_upgrade.rs"

[dependencies]
chrono.workspace = true
libc.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
