[package]
name = "si-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
comfy-table = "7.1.4"
flate2 = "1.1.2"
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4.44"
tempfile.workspace = true
toml.workspace = true
url.workspace = true
si-rs-command-manifest = { path = "../si-command-manifest" }
si-rs-codex = { path = "../si-codex" }
si-rs-config = { path = "../si-config" }
si-rs-core = { path = "../si-core" }
si-rs-fort = { path = "../si-fort" }
si-rs-process = { path = "../si-process" }
si-rs-provider-catalog = { path = "../si-provider-catalog" }
si-rs-provider-github = { path = "../si-provider-github" }
si-rs-provider-aws = { path = "../si-provider-aws" }
si-rs-provider-gcp = { path = "../si-provider-gcp" }
si-rs-provider-google = { path = "../si-provider-google" }
si-rs-provider-openai = { path = "../si-provider-openai" }
si-rs-provider-oci = { path = "../si-provider-oci" }
si-rs-provider-stripe = { path = "../si-provider-stripe" }
si-rs-provider-workos = { path = "../si-provider-workos" }
si-rs-provider-cloudflare = { path = "../si-provider-cloudflare" }
si-rs-provider-apple = { path = "../si-provider-apple" }
si-rs-vault = { path = "../si-vault" }
si-rs-warmup = { path = "../si-warmup" }

[dev-dependencies]
assert_cmd.workspace = true
base64 = "0.22.1"
serde_json.workspace = true
tempfile.workspace = true

[[bin]]
name = "si-rs"
path = "src/main.rs"
