[package]
name = "si-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
comfy-table = "7.1.4"
ecies = { version = "0.2.10", default-features = false, features = ["std", "pure"] }
flate2 = "1.1.2"
hex = "0.4.3"
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4.44"
tempfile.workspace = true
toml.workspace = true
tungstenite.workspace = true
url.workspace = true
si-command-manifest = { path = "../si-command-manifest" }
si-codex = { path = "../si-codex" }
si-config = { path = "../si-config" }
si-core = { path = "../si-core" }
si-fort = { path = "../si-fort" }
si-process = { path = "../si-process" }
si-provider-catalog = { path = "../si-provider-catalog" }
si-provider-github = { path = "../si-provider-github" }
si-provider-aws = { path = "../si-provider-aws" }
si-provider-gcp = { path = "../si-provider-gcp" }
si-provider-google = { path = "../si-provider-google" }
si-provider-openai = { path = "../si-provider-openai" }
si-provider-oci = { path = "../si-provider-oci" }
si-provider-stripe = { path = "../si-provider-stripe" }
si-provider-workos = { path = "../si-provider-workos" }
si-provider-cloudflare = { path = "../si-provider-cloudflare" }
si-provider-apple = { path = "../si-provider-apple" }
si-vault = { path = "../si-vault" }
si-warmup = { path = "../si-warmup" }
si-nucleus-core = { path = "../si-nucleus-core" }
si-nucleus-runtime = { path = "../si-nucleus-runtime" }
si-nucleus-runtime-codex = { path = "../si-nucleus-runtime-codex" }

[dev-dependencies]
assert_cmd.workspace = true
base64 = "0.22.1"
p256.workspace = true
rsa.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
si-nucleus = { path = "../si-nucleus" }

[[bin]]
name = "si"
path = "src/main.rs"
