[package]
name = "si-rs-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
si-rs-docker = { path = "../si-docker" }
si-rs-runtime = { path = "../si-runtime" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
