[package]
name = "si-nucleus-runtime-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
si-nucleus-core = { path = "../si-nucleus-core" }
si-nucleus-runtime = { path = "../si-nucleus-runtime" }
si-rs-process = { path = "../si-process" }
si-rs-core = { path = "../si-core" }
si-rs-codex = { path = "../si-codex" }

[lib]
path = "src/lib.rs"
