[package]
name = "si-nucleus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
si-nucleus-core = { path = "../si-nucleus-core" }

[lib]
path = "src/lib.rs"
