[package]
name = "si-nucleus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
cron.workspace = true
futures-util.workspace = true
hmac.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
si-rs-fort = { path = "../si-fort" }
si-rs-codex = { path = "../si-codex" }
si-nucleus-core = { path = "../si-nucleus-core" }
si-nucleus-runtime = { path = "../si-nucleus-runtime" }
si-nucleus-runtime-codex = { path = "../si-nucleus-runtime-codex" }
tokio.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
