[package]
name = "si-rs-provider-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
hex = "0.4.3"
hmac = "0.12.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
si-rs-config = { path = "../si-config" }
url.workspace = true
