[package]
name = "si-rs-provider-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
blake2 = "0.10.6"
crypto_box = "0.9.1"
jsonwebtoken = "9.3.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
si-rs-config = { path = "../si-config" }
url.workspace = true
