[package]
name = "si-provider-google"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
si-config = { path = "../si-config" }
