[package]
name = "si-rs-provider-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
httpdate = "1.0.3"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
rsa = { version = "0.9.8", features = ["pem"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10.9", features = ["oid"] }
si-rs-config = { path = "../si-config" }
url.workspace = true
