[package]
name = "si-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "import-dotenv-to-si-vault"
path = "src/bin/import_dotenv_to_si_vault.rs"

[[bin]]
name = "fake-codex"
path = "src/bin/fake_codex.rs"

[[bin]]
name = "orbits-test-runner"
path = "src/bin/orbits_test_runner.rs"

[[bin]]
name = "test-fort-spawn-matrix"
path = "src/bin/test_fort_spawn_matrix.rs"

[[bin]]
name = "si-test-runner"
path = "src/bin/si_test_runner.rs"

[[bin]]
name = "si-codex-init"
path = "src/bin/si_codex_init.rs"

[[bin]]
name = "si-entrypoint"
path = "src/bin/si_entrypoint.rs"

[[bin]]
name = "codex-stdout-parser"
path = "src/bin/codex_stdout_parser.rs"

[dependencies]
chrono.workspace = true
libc.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
