[package]
name = "si-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "import-dotenv-to-si-vault"
path = "src/bin/import_dotenv_to_si_vault.rs"

[[bin]]
name = "test-fort-spawn-matrix"
path = "src/bin/test_fort_spawn_matrix.rs"

[[bin]]
name = "si-test-runner"
path = "src/bin/si_test_runner.rs"

[[bin]]
name = "si-install-smoke-root"
path = "src/bin/si_install_smoke_root.rs"

[[bin]]
name = "si-install-smoke-nonroot"
path = "src/bin/si_install_smoke_nonroot.rs"

[[bin]]
name = "si-rust-host-matrix"
path = "src/bin/si_rust_host_matrix.rs"

[[bin]]
name = "si-codex-init"
path = "src/bin/si_codex_init.rs"

[[bin]]
name = "si-entrypoint"
path = "src/bin/si_entrypoint.rs"

[[bin]]
name = "si-sync-nucleus-openapi"
path = "src/bin/si_sync_nucleus_openapi.rs"

[[bin]]
name = "codex-stdout-parser"
path = "src/bin/codex_stdout_parser.rs"

[[bin]]
name = "codex-interactive-driver"
path = "src/bin/codex_interactive_driver.rs"

[dependencies]
chrono.workspace = true
libc.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
si-nucleus = { path = "../si-nucleus" }

[dev-dependencies]
tempfile.workspace = true
